force-app/main/default/objects/AtRiskStudentNotification__e/AtRiskStudentNotification__e.object-meta.xml
<CustomObject>
    <label>At-Risk Student Notification</label>
    <pluralLabel>At-Risk Student Notifications</pluralLabel>
</CustomObject>