force-app/main/default/objects/AtRiskStudentNotification__e/fields/AttendancePercentage__c.field-meta.xml
<CustomField>
    <fullName>AttendancePercentage__c</fullName>
    <label>Attendance Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>