force-app/main/default/objects/AtRiskStudentNotification__e/fields/RiskLevel__c.field-meta.xml
<CustomField>
    <fullName>RiskLevel__c</fullName>
    <label>Risk Level</label>
    <required>true</required>
    <type>Text</type>
    <length>20</length>
</CustomField>