force-app/main/default/objects/AtRiskStudentNotification__e/fields/StudentId__c.field-meta.xml
<CustomField>
    <fullName>StudentId__c</fullName>
    <label>Student ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>